docs: generate swagger docs
