# app/gateway/http/category/get_categories.go
@@ -7,6 +7,16 @@ import (
 	"net/http"
 )
 
+// GetCategories returns all categories.
+// @Summary Get all categories
+// @Description Get all categories
+// @Tags Category
+// @Security BearerToken
+// @Success 200 {object} schema.GetCategoriesResponse "Categories"
+// @Failure 400 {object} string "Invalid request body"
+// @Failure 500 {object} string "Internal server error"
+// @Header all {string} RequestID "x-request-id"
+// @Router /admin/v1/medical-catalog/categories [get]
 func (h Handler) GetCategories(r *http.Request) responses.Response {
 	const operation = "CategoryHandler.GetSpecialties"
 
