# docs/swagger/swagger.json
@@ -8,6 +8,56 @@
     "basePath": "/",
     "paths": {
         "/admin/v1/medical-catalog/categories": {
+            "get": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Get all categories",
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Get all categories",
+                "responses": {
+                    "200": {
+                        "description": "Categories",
+                        "schema": {
+                            "$ref": "#/definitions/schema.GetCategoriesResponse"
+                        },
+                        "headers": {
+                            "RequestID": {
+                                "type": "string",
+                                "description": "x-request-id"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "headers": {
+                            "RequestID": {
+                                "type": "string",
+                                "description": "x-request-id"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "headers": {
+                            "RequestID": {
+                                "type": "string",
+                                "description": "x-request-id"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -26,7 +76,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.CreateCategoryInput"
+                            "$ref": "#/definitions/schema.CreateCategoryRequest"
                         }
                     }
                 ],
@@ -102,7 +152,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Login successfully",
+                        "description": "Login created successfully",
                         "schema": {
                             "type": "string"
                         },
@@ -153,6 +203,44 @@
             }
         },
         "/admin/v1/medical-catalog/specialties": {
+            "get": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Get all specialties",
+                "tags": [
+                    "Specialty"
+                ],
+                "summary": "Get all specialties",
+                "responses": {
+                    "200": {
+                        "description": "Specialties",
+                        "schema": {
+                            "$ref": "#/definitions/schema.GetSpecialtiesResponse"
+                        },
+                        "headers": {
+                            "RequestID": {
+                                "type": "string",
+                                "description": "x-request-id"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "headers": {
+                            "RequestID": {
+                                "type": "string",
+                                "description": "x-request-id"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -171,7 +259,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.CreateSpecialtyInput"
+                            "$ref": "#/definitions/schema.CreateSpecialtyRequest"
                         }
                     }
                 ],
@@ -304,7 +392,7 @@
         }
     },
     "definitions": {
-        "schema.CreateCategoryInput": {
+        "schema.CreateCategoryRequest": {
             "type": "object",
             "properties": {
                 "name": {
@@ -312,7 +400,7 @@
                 }
             }
         },
-        "schema.CreateSpecialtyInput": {
+        "schema.CreateSpecialtyRequest": {
             "type": "object",
             "properties": {
                 "specialtyName": {
@@ -330,6 +418,34 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.GetCategoriesResponse": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "category_name": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                }
+            }
+        },
+        "schema.GetSpecialtiesResponse": {
+            "type": "object",
+            "properties": {
+                "created_by": {
+                    "type": "string"
+                },
+                "specialty_id": {
+                    "type": "string"
+                },
+                "specialty_name": {
                     "type": "string"
                 }
             }
